--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="container mt-3">
-    <h1>Cours 1</h1>
+    <h1>HTML - Cours 1</h1>
     <hr>
     <div class="card">
         <h2 class="card-header">Exercice 1</h2>
