Added more content

--- a/index.html
+++ b/index.html
@@ -26,14 +26,64 @@
     <hr>
 
     <div class="row">
-        <div class="col-6">
+        <div class="col-4">
+            <h5>Titles</h5>
+            <p>Multiple size of title and sub titles</p>
+        </div>
+        <div class="col-8">
+            <pre class="language-html">
+                <code>&lt;h1&gt;Title 1&lt;/h1&gt;
+&lt;h2&gt;Title 2&lt;/h2&gt;
+&lt;h3&gt;Title 3&lt;/h3&gt;
+&lt;h4&gt;Title 4&lt;/h4&gt;
+&lt;h5&gt;Title 5&lt;/h5&gt;
+&lt;h6&gt;Title 6&lt;/h6&gt;</code>
+        </pre>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-4">
             <h5>Paragraph</h5>
             <p>Text content of web pages</p>
         </div>
-        <div class="col-6">
+        <div class="col-8">
             <pre class="language-html">
-                <code>&lt;h5&gt;Paragraph&lt;/h5&gt;
-&lt;p&gt;Text content of web pages&lt;/p&gt;</code>
+                <code>&lt;p&gt;Text content of web pages&lt;/p&gt;</code>
+        </pre>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-4">
+            <h5>Images</h5>
+            <p>Display image from url</p>
+        </div>
+        <div class="col-8">
+            <pre class="language-html">
+                <code>&lt;img src="https://icons.duckduckgo.com/ip3/sshort.net.ico" alt="Some description of the image" /&gt;</code>
+        </pre>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-4">
+            <h5>HTML Structure</h5>
+            <p>Basic HTML structure template</p>
+        </div>
+        <div class="col-8">
+            <pre class="language-html">
+                <code>&lt;!DOCTYPE html&gt;
+&lt;html lang=&quot;en&quot;&gt;
+    &lt;head&gt;
+        &lt;meta charset=&quot;UTF-8&quot;&gt;
+        &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
+        &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+        &lt;title&gt;Document&lt;/title&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+    &lt;/body&gt;
+&lt;/html&gt;</code>
         </pre>
         </div>
     </div>
